force-app/main/default/objects/Tea_Brewing_Step__c/Tea_Brewing_Step__c.object-meta.xml
<CustomObject>
    <label>Tea Brewing Step</label>
    <nameField>
        <displayFormat>TBS-{00000}</displayFormat>
        <label>Tea Brewing Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tea Brewing Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>