force-app/main/default/objects/Tea_Brewing_Step__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Length of steeping time (in seconds) for this step</description>
    <inlineHelpText>Length of steeping time (in seconds) for this step</inlineHelpText>
    <label>Duration</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>