force-app/main/default/objects/Tea_Brewing_Step__c/fields/Tea_Variety__c.field-meta.xml
<CustomField>
    <fullName>Tea_Variety__c</fullName>
    <label>Tea Variety</label>
    <referenceTo>Tea_Variety__c</referenceTo>
    <relationshipLabel>Tea Brewing Steps</relationshipLabel>
    <relationshipName>Tea_Brewing_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>