force-app/main/default/objects/Tea_Brewing_Step__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>Water temperature for this brewing step</description>
    <inlineHelpText>Water temperature for this brewing step</inlineHelpText>
    <label>Temperature</label>
    <length>64</length>
    <type>Text</type>
</CustomField>